--- a/assignment/index.html
+++ b/assignment/index.html
@@ -2,11 +2,11 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Week 4 Assignment</title>
+    <title>Unit 4, Part 1 Assignment</title>
     <script src="scripts/function-practice.js"></script>
   </head>
   <body>
-    <h1>Week 4 Assignment - Part 1</h1>
+    <h1>Unit 4, Part 1 Assignment</h1>
     <p>See console for output.</p>
   </body>
 </html>
